# napi-issue-buffer-crash

./: Cargo.toml  README.md  index.d.ts  package.json  test.js
src/: lib.rs
