[package]
name = "napi-buffer-crash"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-derive = "2.16.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"
serde_bytes = "0.11.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
napi = { version = "=2.16.4", features = ["serde-json", "napi4", "napi5"] }

[build-dependencies]
napi-build = "2.1.3"
